welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var n:Int=getMondeHauteur()
	var couleurs=new Array[Color](getMondeHauteur())
  lireCol1()
  for(i<- 1 to getMondeLargeur()-1){
    recule(getMondeLargeur()-i)
    gauche()
    avance()
    droite()
    avance()
    setCouleurBrosse(couleurs(i))
    baisseBrosse()
    
  }
}

def lireCol1(){
  for (i <- 1 to getMondeHauteur()-1){
    couleurs(i)=getCouleurSol()
    avance()
  }
}